// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`name and last name account creation form for CC, HK, PC, TU, DC, IB matches snapshots for CC 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-4"
      >
        <h2
          class="MuiTypography-root makeStyles-header-5 MuiTypography-h2"
        >
          Almost done, add a few details about yourself.
        </h2>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-inputContainer-1 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inline-6"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink="false"
          for="firstName"
          id="firstName-label"
        >
          First name
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input"
            id="firstName"
            name="firstName"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-inputContainer-1 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inline-6"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink="false"
          for="lastName"
          id="lastName-label"
        >
          Last name
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input"
            id="lastName"
            name="lastName"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-10"
      >
        <h6
          class="MuiTypography-root makeStyles-terms-11 MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          <span>
            By clicking "Join now", you agree to our
          </span>
           
          <a
            href="https://www.care.com/terms-of-use-popup-p1030.html"
          >
            Terms of Use
          </a>
          <span>
             and
          </span>
           
          <a
            href="https://www.care.com/privacy-policy-popup-p1031.html"
          >
            Privacy Policy
          </a>
          <span>
            .
          </span>
        </h6>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Join now
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`name and last name account creation form for CC, HK, PC, TU, DC, IB matches snapshots for DC 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-63"
      >
        <h2
          class="MuiTypography-root makeStyles-header-64 MuiTypography-h2"
        >
          <span>
            Almost done. 
          </span>
          <br />
          <span>
            What's your name?
          </span>
        </h2>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-inputContainer-60 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inline-65"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink="false"
          for="firstName"
          id="firstName-label"
        >
          First name
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input"
            id="firstName"
            name="firstName"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-inputContainer-60 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inline-65"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink="false"
          for="lastName"
          id="lastName-label"
        >
          Last name
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input"
            id="lastName"
            name="lastName"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-69"
      >
        <div
          class="MuiFormControl-root makeStyles-selectContainer-70"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
            data-shrink="false"
            id="source"
          >
            How did you hear about us?
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline no-value MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="source"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="source"
              role="button"
              tabindex="-1"
            >
              Select option
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              name="howDidYouHearAboutUs"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-root-75"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.2 8a.91.91 0 011.2 0 .91.91 0 010 1.2L12.6 16a.91.91 0 01-1.2 0L4.6 9.2a.91.91 0 010-1.2.91.91 0 011.2 0l6.2 6.2z"
                fill="#223f5f"
              />
              <path
                d="M12 16.37a1 1 0 01-.71-.26l-6.8-6.8a1.09 1.09 0 010-1.42 1.09 1.09 0 011.42 0L12 14l6.09-6.1a1.09 1.09 0 011.42 0 1.09 1.09 0 010 1.42l-6.8 6.8a1 1 0 01-.71.25zM5.2 7.93a.69.69 0 00-.49.18.76.76 0 000 1l6.8 6.8a.78.78 0 001 0l6.8-6.8a.76.76 0 000-1 .76.76 0 00-1 0L12 14.41l-.11-.1-6.2-6.2a.69.69 0 00-.49-.18z"
                fill="#223f5f"
              />
            </svg>
          </div>
          <p
            class="MuiFormHelperText-root"
          >
            <span>
              ​
            </span>
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-73"
      >
        <h6
          class="MuiTypography-root makeStyles-disclaimer-62 MuiTypography-subtitle2"
        >
          <span>
            By clicking "Join and view matches
          </span>
          <span>
            ," you (1) affirm you have read and agree to our
          </span>
           
          <a
            href="https://www.care.com/terms-of-use-popup-p1030.html"
          >
            Terms of Use
          </a>
          <span>
             and
          </span>
           
          <a
            href="https://www.care.com/privacy-policy-popup-p1031.html"
          >
            Privacy Policy
          </a>
           
          <span>
            and (2) you agree that Care.com may share your information with up to 5 local daycares (including by SMS and email) to contact you regarding your request based on the criteria you’ve provided.
          </span>
        </h6>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Join and view matches
          <span
            class="MuiButton-endIcon MuiButton-iconSizeLarge"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-root-76 makeStyles-buttonEndIcon-61"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10.7 22.56a1 1 0 00.75-.34l8.35-9.56a1 1 0 000-1.32l-8.35-9.56A1 1 0 1010 3.1l7.72 8.9L10 20.9a1 1 0 000 1.41 1 1 0 00.7.25z"
                fill="#172c42"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`name and last name account creation form for CC, HK, PC, TU, DC, IB matches snapshots for HK 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-15"
      >
        <h2
          class="MuiTypography-root makeStyles-header-16 MuiTypography-h2"
        >
          Almost done, add a few details about yourself.
        </h2>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-inputContainer-12 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inline-17"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink="false"
          for="firstName"
          id="firstName-label"
        >
          First name
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input"
            id="firstName"
            name="firstName"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-inputContainer-12 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inline-17"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink="false"
          for="lastName"
          id="lastName-label"
        >
          Last name
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input"
            id="lastName"
            name="lastName"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-21"
      >
        <div
          class="MuiFormControl-root makeStyles-selectContainer-22"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
            data-shrink="false"
            id="source"
          >
            How did you hear about us?
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline no-value MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="source"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="source"
              role="button"
              tabindex="-1"
            >
              Select option
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              name="howDidYouHearAboutUs"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-root-27"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.2 8a.91.91 0 011.2 0 .91.91 0 010 1.2L12.6 16a.91.91 0 01-1.2 0L4.6 9.2a.91.91 0 010-1.2.91.91 0 011.2 0l6.2 6.2z"
                fill="#223f5f"
              />
              <path
                d="M12 16.37a1 1 0 01-.71-.26l-6.8-6.8a1.09 1.09 0 010-1.42 1.09 1.09 0 011.42 0L12 14l6.09-6.1a1.09 1.09 0 011.42 0 1.09 1.09 0 010 1.42l-6.8 6.8a1 1 0 01-.71.25zM5.2 7.93a.69.69 0 00-.49.18.76.76 0 000 1l6.8 6.8a.78.78 0 001 0l6.8-6.8a.76.76 0 000-1 .76.76 0 00-1 0L12 14.41l-.11-.1-6.2-6.2a.69.69 0 00-.49-.18z"
                fill="#223f5f"
              />
            </svg>
          </div>
          <p
            class="MuiFormHelperText-root"
          >
            <span>
              ​
            </span>
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-25"
      >
        <h6
          class="MuiTypography-root makeStyles-terms-26 MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          <span>
            By clicking "Join now", you agree to our
          </span>
           
          <a
            href="https://www.care.com/terms-of-use-popup-p1030.html"
          >
            Terms of Use
          </a>
          <span>
             and
          </span>
           
          <a
            href="https://www.care.com/privacy-policy-popup-p1031.html"
          >
            Privacy Policy
          </a>
          <span>
            .
          </span>
        </h6>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Join now
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`name and last name account creation form for CC, HK, PC, TU, DC, IB matches snapshots for IB 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-80"
      >
        <h2
          class="MuiTypography-root makeStyles-header-81 MuiTypography-h2"
        >
          One more step!
        </h2>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-inputContainer-77 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inline-82"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink="false"
          for="firstName"
          id="firstName-label"
        >
          First name
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input"
            id="firstName"
            name="firstName"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-inputContainer-77 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inline-82"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink="false"
          for="lastName"
          id="lastName-label"
        >
          Last name
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input"
            id="lastName"
            name="lastName"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-86"
      >
        <h6
          class="MuiTypography-root makeStyles-terms-87 MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          <span>
            By clicking "Join now", you agree to our
          </span>
           
          <a
            href="https://www.care.com/terms-of-use-popup-p1030.html"
          >
            Terms of Use
          </a>
          <span>
             and
          </span>
           
          <a
            href="https://www.care.com/privacy-policy-popup-p1031.html"
          >
            Privacy Policy
          </a>
          <span>
            .
          </span>
        </h6>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Join now
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`name and last name account creation form for CC, HK, PC, TU, DC, IB matches snapshots for PC 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-31"
      >
        <h2
          class="MuiTypography-root makeStyles-header-32 MuiTypography-h2"
        >
          Almost done, add a few details about yourself.
        </h2>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-inputContainer-28 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inline-33"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink="false"
          for="firstName"
          id="firstName-label"
        >
          First name
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input"
            id="firstName"
            name="firstName"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-inputContainer-28 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inline-33"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink="false"
          for="lastName"
          id="lastName-label"
        >
          Last name
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input"
            id="lastName"
            name="lastName"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-37"
      >
        <div
          class="MuiFormControl-root makeStyles-selectContainer-38"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
            data-shrink="false"
            id="source"
          >
            How did you hear about us?
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline no-value MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="source"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="source"
              role="button"
              tabindex="-1"
            >
              Select option
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              name="howDidYouHearAboutUs"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-root-43"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.2 8a.91.91 0 011.2 0 .91.91 0 010 1.2L12.6 16a.91.91 0 01-1.2 0L4.6 9.2a.91.91 0 010-1.2.91.91 0 011.2 0l6.2 6.2z"
                fill="#223f5f"
              />
              <path
                d="M12 16.37a1 1 0 01-.71-.26l-6.8-6.8a1.09 1.09 0 010-1.42 1.09 1.09 0 011.42 0L12 14l6.09-6.1a1.09 1.09 0 011.42 0 1.09 1.09 0 010 1.42l-6.8 6.8a1 1 0 01-.71.25zM5.2 7.93a.69.69 0 00-.49.18.76.76 0 000 1l6.8 6.8a.78.78 0 001 0l6.8-6.8a.76.76 0 000-1 .76.76 0 00-1 0L12 14.41l-.11-.1-6.2-6.2a.69.69 0 00-.49-.18z"
                fill="#223f5f"
              />
            </svg>
          </div>
          <p
            class="MuiFormHelperText-root"
          >
            <span>
              ​
            </span>
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-41"
      >
        <h6
          class="MuiTypography-root makeStyles-terms-42 MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          <span>
            By clicking "Join now", you agree to our
          </span>
           
          <a
            href="https://www.care.com/terms-of-use-popup-p1030.html"
          >
            Terms of Use
          </a>
          <span>
             and
          </span>
           
          <a
            href="https://www.care.com/privacy-policy-popup-p1031.html"
          >
            Privacy Policy
          </a>
          <span>
            .
          </span>
        </h6>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Join now
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`name and last name account creation form for CC, HK, PC, TU, DC, IB matches snapshots for TU 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-47"
      >
        <h2
          class="MuiTypography-root makeStyles-header-48 MuiTypography-h2"
        >
          Almost done, add a few details about yourself.
        </h2>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-inputContainer-44 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inline-49"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink="false"
          for="firstName"
          id="firstName-label"
        >
          First name
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input"
            id="firstName"
            name="firstName"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-inputContainer-44 MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inline-49"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink="false"
          for="lastName"
          id="lastName-label"
        >
          Last name
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInputBase-formControl MuiInput-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input"
            id="lastName"
            name="lastName"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-53"
      >
        <div
          class="MuiFormControl-root makeStyles-selectContainer-54"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
            data-shrink="false"
            id="source"
          >
            How did you hear about us?
          </label>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline no-value MuiInputBase-formControl MuiInput-formControl"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="source"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="source"
              role="button"
              tabindex="-1"
            >
              Select option
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              name="howDidYouHearAboutUs"
              tabindex="-1"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-root-59"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.2 8a.91.91 0 011.2 0 .91.91 0 010 1.2L12.6 16a.91.91 0 01-1.2 0L4.6 9.2a.91.91 0 010-1.2.91.91 0 011.2 0l6.2 6.2z"
                fill="#223f5f"
              />
              <path
                d="M12 16.37a1 1 0 01-.71-.26l-6.8-6.8a1.09 1.09 0 010-1.42 1.09 1.09 0 011.42 0L12 14l6.09-6.1a1.09 1.09 0 011.42 0 1.09 1.09 0 010 1.42l-6.8 6.8a1 1 0 01-.71.25zM5.2 7.93a.69.69 0 00-.49.18.76.76 0 000 1l6.8 6.8a.78.78 0 001 0l6.8-6.8a.76.76 0 000-1 .76.76 0 00-1 0L12 14.41l-.11-.1-6.2-6.2a.69.69 0 00-.49-.18z"
                fill="#223f5f"
              />
            </svg>
          </div>
          <p
            class="MuiFormHelperText-root"
          >
            <span>
              ​
            </span>
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root-57"
      >
        <h6
          class="MuiTypography-root makeStyles-terms-58 MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          <span>
            By clicking "Join now", you agree to our
          </span>
           
          <a
            href="https://www.care.com/terms-of-use-popup-p1030.html"
          >
            Terms of Use
          </a>
          <span>
             and
          </span>
           
          <a
            href="https://www.care.com/privacy-policy-popup-p1031.html"
          >
            Privacy Policy
          </a>
          <span>
            .
          </span>
        </h6>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Join now
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
